Change start tiles to be a list